dbeaver/dbeaver#11453 Revert